// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Execution status renders a negative outcome 1`] = `
<span
  className="execution-status"
  data-ouia-component-type="execution-status"
  data-ouia-safe={true}
>
  <ErrorCircleOIcon
    className="execution-status__badge execution-status__badge--error"
    color="currentColor"
    noVerticalAlign={false}
    size="sm"
  />
  <span>
    Error
  </span>
</span>
`;

exports[`Execution status renders a positive outcome 1`] = `
<span
  className="execution-status"
  data-ouia-component-type="execution-status"
  data-ouia-safe={true}
>
  <CheckCircleIcon
    className="execution-status__badge execution-status__badge--success"
    color="currentColor"
    noVerticalAlign={false}
    size="sm"
  />
  <span>
    Completed
  </span>
</span>
`;
